--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -230,7 +230,7 @@
 		}
 	}
 }
-#content.reservation.confirmation {
+#content.reservation.bookingForm {
 
 	color: $font-color;
 	hr {border-color: #9a9a9a;}
