--- a/public/scss/partials/_buttons.scss
+++ b/public/scss/partials/_buttons.scss
@@ -54,3 +54,75 @@ span.arrow-right {
         margin-top: 20px;
     }
 }
+div.connect-button {
+    div span {
+        display: block;
+        text-align: center;
+        color: white;
+        font-size: 1.8em;
+        padding-top: 14px;
+        padding-left: 60px;
+    }
+    .facebook {
+        cursor: pointer;
+        border-radius: 5px;
+        overflow: hidden;
+        height: 60px;
+        margin: 10px;
+        background-color: $facebook-bg;
+        &:before {
+            content: " ";
+            background: url(../../img/facebook@2x.png) no-repeat center center;
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin-left: 5px;
+        }
+    }
+    .twitter {
+        cursor: pointer;
+        border-radius: 5px;
+        overflow: hidden;
+        height: 60px;
+        margin: 10px;
+        background-color: $twitter-bg;
+        &:before {
+            content: " ";
+            background: url(../../img/twitter@2x.png) no-repeat center center;
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            margin-left: 5px;
+        }
+    }
+}
+.btn-frame, .btn-frame-blue, .btn-frame-red, .btn-frame-yellow, .btn-frame-green, .btn-frame-orange, .btn-frame-darkgrey {
+    @extend .btn;
+    border-color: $grey;
+    border-width: 2px;
+    border-top-width: 4px;
+    border-radius: 0px;
+    min-height: 50px;
+    padding-top: 10px;
+    &.btn-frame {
+        border-top-width: 2px;
+    }
+    &.btn-frame-blue {
+        border-top-color: blue;
+    }
+    &.btn-frame-red {
+        border-top-color: red;
+    }
+    &.btn-frame-orange {
+        border-top-color: orange;
+    }
+    &.btn-frame-yellow {
+        border-top-color: yellow;
+    }
+    &.btn-frame-green {
+        border-top-color: green;
+    }
+    &.btn-frame-darkgrey {
+        border-top-color: $darkgrey;
+    }
+}
