--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -186,48 +186,6 @@
 				}
 			}
 		}
-		div.connect-button {
-			div span {
-				display: block;
-				text-align: center;
-				color: white;
-				font-size: 1.8em;
-				padding-top: 14px;
-				padding-left: 60px;
-			}
-			.facebook {
-				cursor: pointer;
-				border-radius: 5px;
-				overflow: hidden;
-				height: 60px;
-				margin: 10px;
-				background-color: $facebook-bg;
-				&:before {
-					content: " ";
-					background: url(../../img/facebook@2x.png) no-repeat center center;
-					position: absolute;
-					width: 60px;
-					height: 60px;
-					margin-left: 5px;
-				}
-			}
-			.twitter {
-				cursor: pointer;
-				border-radius: 5px;
-				overflow: hidden;
-				height: 60px;
-				margin: 10px;
-				background-color: $twitter-bg;
-				&:before {
-					content: " ";
-					background: url(../../img/twitter@2x.png) no-repeat center center;
-					position: absolute;
-					width: 60px;
-					height: 60px;
-					margin-left: 5px;
-				}
-			}
-		}
 	}
 }
 #content.reservation.bookingForm {
@@ -405,5 +363,59 @@
 		font-weight: $semiBold;
 		color: white;
 		@include box-shadow(0 1px 5px rgba(0,0,0,0.2));
+	}
+}
+
+#content.reservation.confirmation {
+	.row {
+		.infoFrame {
+			margin-top: 25px;
+			border-color: $grey;
+			border-width: 1px;
+			border-style: solid;
+			padding: 10px;
+			overflow: auto;
+			div.separate {
+				&:first-child {
+					border-right: solid;
+					border-width: 1px;
+					border-color: $grey;
+				}
+				&:nth-child(2) {
+					border-left: solid;
+					border-width: 1px;
+					border-color: $grey;
+					left: -1px;
+				}
+			}
+		}
+		.buttonPanel {
+			a {
+				margin-top: 5px;
+				text-align: center;
+				&:first-child {
+					margin-right: 4%;
+				}
+				&:first-child, &:nth-child(2) {
+					width: 48%;
+					float: left;
+				}
+				&:nth-child(3) {
+					margin-left: 16%;
+					margin-right: 8%;
+				}
+				&:nth-child(3), &:nth-child(4) {
+					width: 30%;
+					margin-bottom: 5px;
+					float: left;
+				}
+				&:nth-child(5) {
+					width: 30%;
+					display: block;
+					clear: both;
+					margin-left: 35%;
+				}
+			}
+		}
 	}
 }
