--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -1,5 +1,5 @@
 /*////////////////////////////////
-	    V A R I A B L E S 
+	    V A R I A B L E S
 ////////////////////////////////*/
 $red: #fc5a5f;
 $green: #20af69;
@@ -14,7 +14,8 @@ $darkgrey: #595959;
 $font-color: #595959;
 $font-main: 'Source Sans Pro', sans-serif;
 $light: 200;$regular: 400;$semiBold: 600;
-$font-second: 'Lato', sans-serif;	
+$font-second: 'Lato', sans-serif;
 $latoLight: 300; $latoBold: 700;
 $facebook-bg: #6686D0;
 $twitter-bg: #14C4F8;
+$hairfie: #fe5b5f;
