--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -11,6 +11,7 @@ $bg3: #f4f4f4;
 $bgfooter: #353535;
 $grey: #c4c4c4;
 $darkgrey: #595959;
+$lightblue: #84F0F3;
 $font-color: #595959;
 $font-main: 'Source Sans Pro', sans-serif;
 $light: 200;$regular: 400;$semiBold: 600;
