--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10143,24 +10143,50 @@ section.home-footer .row > div {
     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); }
 
-.container.user#content .short-info {
-  margin-top: 10px;
-  overflow: auto; }
-  @media screen and (max-width: 767px) {
-    .container.user#content .short-info {
-      margin-top: 100px; } }
-  .container.user#content .short-info img.ProfilePicture {
+.container.user#content .main-content {
+  margin-top: 20px;
+  margin-bottom: 70px; }
+  .container.user#content .main-content img.ProfilePicture {
     display: block;
     width: 14em;
     border-radius: 100%;
     margin: 0 auto 20px;
     border: 10px solid #f0f0f1; }
-.container.user#content .nav li:first-child .icon-nav {
-  background: url(../images/icon-salon-nav3.jpg) no-repeat center center; }
-.container.user#content .nav li:nth-child(2) .icon-nav {
-  background: url(../images/icon-salon-nav2.jpg) no-repeat center center; }
-.container.user#content .nav li:last-child .icon-nav {
-  background: url(../images/icon-coeur.png) no-repeat center center; }
+  .container.user#content .main-content .short-info {
+    margin-top: 10px;
+    overflow: auto; }
+    @media screen and (max-width: 767px) {
+      .container.user#content .main-content .short-info {
+        margin-top: 100px; } }
+  .container.user#content .main-content section.user-content h5 {
+    font-family: 'Source Sans Pro', sans-serif; }
+  .container.user#content .main-content section.user-content > .row {
+    background-color: white; }
+  .container.user#content .main-content section.user-content ul.nav {
+    margin: 0; }
+    .container.user#content .main-content section.user-content ul.nav li:first-child .icon-nav {
+      background: url(../images/icon-salon-nav3.jpg) no-repeat center center; }
+    .container.user#content .main-content section.user-content ul.nav li:nth-child(2) .icon-nav {
+      background: url(../images/icon-salon-nav2.jpg) no-repeat center center; }
+    .container.user#content .main-content section.user-content ul.nav li:last-child .icon-nav {
+      background: url(../images/icon-coeur.png) no-repeat center center; }
+  .container.user#content .main-content section.user-content section {
+    padding-left: 50px;
+    padding-right: 50px; }
+    @media screen and (min-width: 1200px) {
+      .container.user#content .main-content section.user-content section div.hairfies div.row div.single-hairfie {
+        width: 20%; } }
+    .container.user#content .main-content section.user-content section div.comments .ProfilePicture {
+      margin-right: 25px;
+      float: left;
+      width: 60px;
+      border: none; }
+    @media screen and (max-width: 767px) {
+      .container.user#content .main-content section.user-content section {
+        padding-left: 15px;
+        padding-right: 15px; } }
+    .container.user#content .main-content section.user-content section h4 {
+      color: #343434; }
 
 .connect-form {
   padding-top: 1px;
