--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10640,6 +10640,9 @@ div.pagination {
     div.pagination a:hover {
       text-decoration: none; }
 
+.breadcrumb > li + li:before {
+  content: " / "; }
+
 header {
   width: 100%;
   height: 60px;
@@ -12698,67 +12701,6 @@ section.home-footer .row > div {
     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); }
 
-<<<<<<< HEAD
-.container.user#content .main-content {
-  margin-top: 20px;
-  margin-bottom: 70px; }
-  .container.user#content .main-content img.ProfilePicture {
-    display: block;
-    width: 14em;
-    border-radius: 100%;
-    margin: 0 auto 20px;
-    border: 10px solid #f0f0f1; }
-  .container.user#content .main-content .short-info {
-    margin-top: 10px;
-    overflow: auto; }
-    @media screen and (max-width: 767px) {
-      .container.user#content .main-content .short-info {
-        margin-top: 100px; } }
-  .container.user#content .main-content section.user-content h5 {
-    font-family: "Source Sans Pro", sans-serif; }
-  .container.user#content .main-content section.user-content > .row {
-    background-color: white; }
-  .container.user#content .main-content section.user-content ul.nav {
-    margin: 0; }
-    .container.user#content .main-content section.user-content ul.nav li:first-child .icon-nav {
-      background: url(../images/icon-salon-nav3.jpg) no-repeat center center; }
-    .container.user#content .main-content section.user-content ul.nav li:nth-child(2) .icon-nav {
-      background: url(../images/icon-salon-nav2.jpg) no-repeat center center; }
-    .container.user#content .main-content section.user-content ul.nav li:last-child .icon-nav {
-      background: url(../images/icon-coeur.png) no-repeat center center; }
-  .container.user#content .main-content section.user-content section {
-    padding-left: 50px;
-    padding-right: 50px; }
-    @media screen and (min-width: 1200px) {
-      .container.user#content .main-content section.user-content section div.hairfies div.row div.single-hairfie {
-        width: 20%; } }
-    .container.user#content .main-content section.user-content section div.comments .ProfilePicture {
-      margin-right: 25px;
-      float: left;
-      width: 60px;
-      border: none; }
-    .container.user#content .main-content section.user-content section div.comments .separate {
-      border-left: solid;
-      border-width: 2px;
-      border-color: #c4c4c4;
-      left: -1px;
-      padding-right: 0; }
-      .container.user#content .main-content section.user-content section div.comments .separate p {
-        font-size: 1.2em; }
-      .container.user#content .main-content section.user-content section div.comments .separate a {
-        font-size: 1.4em;
-        margin-top: 5px;
-        width: 48%; }
-      @media screen and (max-width: 991px) {
-        .container.user#content .main-content section.user-content section div.comments .separate a.businessButton {
-          width: 100%; } }
-    @media screen and (max-width: 1199px) {
-      .container.user#content .main-content section.user-content section {
-        padding-left: 15px;
-        padding-right: 15px; } }
-    .container.user#content .main-content section.user-content section h4 {
-      color: #343434; }
-=======
 #content.reservation.confirmation .row input.registration {
   width: 60%;
   float: left; }
@@ -12853,7 +12795,66 @@ section.home-footer .row > div {
     display: block;
     clear: both;
     margin-left: 35%; }
->>>>>>> 7ac07f543faeab1d22a94275299cf94fb082539e
+
+.container.user#content .main-content {
+  margin-top: 20px;
+  margin-bottom: 70px; }
+  .container.user#content .main-content img.ProfilePicture {
+    display: block;
+    width: 14em;
+    border-radius: 100%;
+    margin: 0 auto 20px;
+    border: 10px solid #f0f0f1; }
+  .container.user#content .main-content .short-info {
+    margin-top: 10px;
+    overflow: auto; }
+    @media screen and (max-width: 767px) {
+      .container.user#content .main-content .short-info {
+        margin-top: 100px; } }
+  .container.user#content .main-content section.user-content h5 {
+    font-family: "Source Sans Pro", sans-serif; }
+  .container.user#content .main-content section.user-content > .row {
+    background-color: white; }
+  .container.user#content .main-content section.user-content ul.nav {
+    margin: 0; }
+    .container.user#content .main-content section.user-content ul.nav li:first-child .icon-nav {
+      background: url(../images/icon-salon-nav3.jpg) no-repeat center center; }
+    .container.user#content .main-content section.user-content ul.nav li:nth-child(2) .icon-nav {
+      background: url(../images/icon-salon-nav2.jpg) no-repeat center center; }
+    .container.user#content .main-content section.user-content ul.nav li:last-child .icon-nav {
+      background: url(../images/icon-coeur.png) no-repeat center center; }
+  .container.user#content .main-content section.user-content section {
+    padding-left: 50px;
+    padding-right: 50px; }
+    @media screen and (min-width: 1200px) {
+      .container.user#content .main-content section.user-content section div.hairfies div.row div.single-hairfie {
+        width: 20%; } }
+    .container.user#content .main-content section.user-content section div.comments .ProfilePicture {
+      margin-right: 25px;
+      float: left;
+      width: 60px;
+      border: none; }
+    .container.user#content .main-content section.user-content section div.comments .separate {
+      border-left: solid;
+      border-width: 2px;
+      border-color: #c4c4c4;
+      left: -1px;
+      padding-right: 0; }
+      .container.user#content .main-content section.user-content section div.comments .separate p {
+        font-size: 1.2em; }
+      .container.user#content .main-content section.user-content section div.comments .separate a {
+        font-size: 1.4em;
+        margin-top: 5px;
+        width: 48%; }
+      @media screen and (max-width: 991px) {
+        .container.user#content .main-content section.user-content section div.comments .separate a.businessButton {
+          width: 100%; } }
+    @media screen and (max-width: 1199px) {
+      .container.user#content .main-content section.user-content section {
+        padding-left: 15px;
+        padding-right: 15px; } }
+    .container.user#content .main-content section.user-content section h4 {
+      color: #343434; }
 
 .connect-form {
   padding-top: 1px;
