--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -45,55 +45,19 @@
                         width: 20%;
                     }
                 }
-                div.comments {
-                    .ProfilePicture {
-                    margin-right: 25px;
-                    float: left;
-                    width: 60px;
-                    border: none;
-                    }
-                    .icon-home {
-                        margin-left: 25px;
-                        &:before {
-                            content: " ";
-                            background: url(../../img/icons/home.png) no-repeat center center;
-                            width: 20px;
-                            height: 20px;
-                            position: absolute;
-                            margin-left: -25px;
-                            top: -5px;
-                        }
-                    }
-                    .separate {
-                        p {
-                            font-size: 1.2em;
-                        }
-                        a {
-                            font-size: 1.4em;
-                            margin-top: 5px;
-                            width: 48%;
-                        }
-                        @media screen and (max-width: $screen-sm-max) {
-                            a.businessButton {
-                                width: 100%;
-                            }
-                        }
-                        border-left: solid;
-                        border-width: 2px;
-                        border-color: $grey;
-                        left: -1px;
-                        padding-right: 0;
-                    }
+                div.image-block img {
+                    width: 100%;
+                    max-width: 250px;
                 }
+                margin-bottom: 20px;
                 padding-left: 50px;
                 padding-right: 50px;
                 @media screen and (max-width: $screen-md-max) {
                     padding-left: 15px;
                     padding-right: 15px;
                 }
-                h4 {
-                    color: #343434;
-                }
+                overflow: auto;
+                margin-bottom: 20px;
             }
         }
     }
