--- a/public/scss/partials/_helpers.scss
+++ b/public/scss/partials/_helpers.scss
@@ -23,6 +23,14 @@
 	-ms-transition:     $transition;
 	-o-transition:      $transition;
 }
+@mixin filter($filter)
+{
+	-webkit-filter: $filter;
+	-moz-filter:    $filter;
+	-ms-filter:     $filter;
+	-o-filter:      $filter;
+	filter: $filter;
+}
 @mixin box-shadow($string)
 {
 	-webkit-box-shadow: $string;
