--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -1,4 +1,16 @@
+.hairdresser.short-background {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-color: #838B95;
+    width: 100%;
+    height: 100%;
+    @include filter(blur(5px));
+}
+
 .container.hairdresser#content {
+    background-color: transparent;
     .main-content {
         margin-top: 20px;
         margin-bottom: 70px;
@@ -16,6 +28,13 @@
                 margin-top: 100px;
             }
             overflow: auto;
+        }
+        .short-background {
+            width: 200vw;
+            left: -100vw;
+            position: absolute;
+            height: 400px;
+            @include filter(blur(5px));
         }
         section.hairdresser-content {
             h5 {
@@ -58,6 +77,11 @@
                 }
                 overflow: auto;
                 margin-bottom: 20px;
+                div.businessButtons {
+                    margin-top: 10px;
+                }
+                position: relative;
+                background: white;
             }
         }
     }
