--- a/public/scss/partials/_page-hairdresser.scss
+++ b/public/scss/partials/_page-hairdresser.scss
@@ -22,6 +22,18 @@
                 margin: 0 auto 20px;
                 border: 10px solid $bg2;
         }
+        div.pro-label {
+            background-color: red;
+            border-radius: 3px;
+            color: white;
+            font-size: medium;
+            padding: 2px;
+            padding-left: 5px;
+            padding-right: 5px;
+            position: absolute;
+            top: 25%;
+            right: calc(50% - 70px);
+        }
         .short-info {
             margin-top: 10px;
             @media screen and (max-width: $screen-xs-max) {
