--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12891,6 +12891,17 @@ section.home-footer .row > div {
       border-radius: 100%;
       margin: 0 auto 20px;
       border: 10px solid #f0f0f1; }
+    .container.hairdresser#content .main-content div.pro-label {
+      background-color: red;
+      border-radius: 3px;
+      color: white;
+      font-size: medium;
+      padding: 2px;
+      padding-left: 5px;
+      padding-right: 5px;
+      position: absolute;
+      top: 25%;
+      right: calc(50% - 70px); }
     .container.hairdresser#content .main-content .short-info {
       margin-top: 10px;
       overflow: auto; }
